--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,53 +1,86 @@
-.App {
+.app {
   width: 1000px; /* 원하는 너비로 설정 */
   margin: 0 auto; /* 가운데 정렬을 위해 좌우 마진을 auto로 설정 */
 }
 
-.App-header {
+.app-header {
+  margin-top: 50px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.app-main{
   margin-top: 30px;
   display: flex;
-  justify-content: center; /* 수평 가운데 정렬 */
+  flex-direction: column;
 }
 
-.Category-btn-group {
-}
-
-.Category-btn {
-  font-size: 15px;
-  width: 150px;
-  height: 50px;
-  background-color: #D9D9D9;
-  color: black;
-  border: none;
-  border-radius: 25px;
-  margin: 5px;
-}
-
-.App-main{
-  margin-top: 10px;
-  display: flex;
-  justify-content: center; /* 수평 가운데 정렬 */
-}
-
-.Search {
-  width: 100%;
+.search {
+  width: 400px;
   position: relative;
   display: flex;
   justify-content: center; /* 수평 가운데 정렬 */
 }
 
-.Search-input {
-  width: 900px; /* 화면 너비의 100%로 설정하여 화면을 꽉 채움 */
+.search .input {
+  width: 100%; /* 화면 너비의 100%로 설정하여 화면을 꽉 채움 */
   border: 1px solid #bbb;
   border-radius: 8px;
   padding: 10px 12px;
   font-size: 14px;
 }
 
-.Search-img {
+.search .img {
   position : absolute;
   width: 17px;
   top: 10px;
-  right: 50px;
+  right: 10px;
   margin: 0;
+}
+
+.category {
+  margin-top: 30px;
+  display: flex;
+  flex-wrap: wrap; /* 버튼들이 넘치면 자동으로 다음 줄로 이동 */
+  justify-content: center; /* 가운데 정렬 */
+}
+
+.category .btn {
+  font-size: 11px;
+  width: 100px;
+  height: 40px;
+  background-color: #E7E7E7;
+  color: black;
+  border: none;
+  border-radius: 25px;
+  margin: 5px;
+}
+
+.chat-list{
+  display:flex;
+  flex-wrap: wrap; /* 요소들이 여러 줄에 걸쳐 표시되도록 함 */
+  justify-content:row;
+  gap:16px;
+}
+
+.chat-list .card{
+  display:flex;
+  flex-direction:column; 
+  justify-content:space-between;
+  width: 270px;
+  height: 150px;
+  border:1px solid #ebeaec;
+  border-radius:16px;
+  padding:24px;
+}
+  
+.chat-list .card .title{
+  font-weight:bold;
+  font-size:16px
+}
+
+.chat-list .card .date{
+  font-size:12px;
+  color:#b4b4b6;
 }
