--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,4 +1,5 @@
 .app {
+  position: relative; /* 자식 요소의 위치를 상대적으로 설정하기 위해 필요 */
   width: 1000px; /* 원하는 너비로 설정 */
   margin: 0 auto; /* 가운데 정렬을 위해 좌우 마진을 auto로 설정 */
 }
@@ -10,7 +11,7 @@
 .app-main{
   margin-top: 30px;
   display: flex;
-  flex-direction: column;
+  flex-direction: column;  
 }
 
 .search {
@@ -72,4 +73,22 @@
 .chat-list .card .date{
   font-size:12px;
   color:#b4b4b6;
+}
+
+.floating-button {
+  position: fixed;
+  bottom: 10%;
+  right: 24%;
+  z-index: 1000;
+}
+
+.floating-button button {
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  background-color: rgba(255, 0, 0, 0.2);
+  color: white;
+  font-size:36px;
+  border: none;
+  outline: none;
 }
