--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -11,7 +11,8 @@
 .app-main{
   margin-top: 30px;
   display: flex;
-  flex-direction: column;  
+  flex-direction: column;
+  height: 100vh;
 }
 
 .search {
@@ -145,4 +146,42 @@
 .form-group input {
   width: 200px; /* 컨트롤의 너비를 설정합니다. (라벨의 너비 + 여백) */
   /* 필요한 스타일링을 추가합니다. */
+}
+
+.chat-room {
+  display: flex;
+  height: 800px;
+  background-color:aliceblue;
+}
+
+.chat-room .left {  
+  position: relative;
+  margin-left: 2%;
+  border-right: 1px solid black; /* 우측에 실선 표시 */
+  width: 30%;  
+}
+
+.chat-room .right {
+  position: relative;
+  margin-left: 2%;
+  flex: 1; /* 좌측 영역은 나머지 공간을 채움 */  
+}
+
+.chat-room .leave-button {
+  position: absolute;
+  left: 10px;
+  bottom: 10px;
+}
+
+.chat-room .input-area {
+  position: absolute;
+  left: 10px;
+  bottom: 10px;
+}
+
+.chat-room .messages {
+  position: absolute;
+  height: 600px;
+  width: 650px;
+  overflow-y: auto; /* 세로 방향으로 내용이 넘치면 스크롤바 생성 */
 }
