* 백엔드에서 데이터를 가지고 오듯이 소스 적용

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -150,11 +150,11 @@
 
 .chat-room {
   display: flex;
-  height: 800px;
+  height: 80vh;
   background-color:aliceblue;
 }
 
-.chat-room .left {  
+.chat-room .left {
   position: relative;
   margin-left: 2%;
   border-right: 1px solid black; /* 우측에 실선 표시 */
